# rust

./: .gitignore  AGENTS.md  CESKY.md  Cargo.toml  README.md  all_sources.txt  build.sh  build_vendor.sh  ci_offline_setup.sh  evendor  evendor.sh  index.html  join_toolchain.sh  offline.sh  pack_toolchain.sh  rust-toolchain.toml  scene.js  temp.txt
.cargo/: config.toml
.github/workflows/: offline.yml
scripts/: dump_sources.sh  pre-push
src/: app.rs  camera.rs  lib.rs  main.rs  math.rs  scene.rs  shader.wgsl  web.rs
src/graphics/: depth.rs  mod.rs  pipeline.rs  vertex.rs
src/input/: active_camera.rs  camera.rs  controls.rs  keyboard.rs  loop.rs  mod.rs  mouse.rs  orbit_camera.rs
src/platform/: desktop.rs  mod.rs  web.rs
src/render/: buffers.rs  data.rs  depth.rs  init.rs  mod.rs  pipeline.rs  renderer.rs  scene.rs  state.rs  types.rs
src/scene/: cube.rs  mod.rs
web/: index.html
