[package]
name = "webgpu_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# Aktualizováno na wgpu 25.0.2
wgpu = { version = "25.0.2", features = ["webgpu", "webgl", "wgsl"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "console",
    "Performance",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "HtmlElement"
] }
glam    = { version = "0.30.3", default-features = false, features = ["libm","serde"] }
js-sys = "0.3"

